# UnnamedGameEngine

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  REPORT.md  cards.json  main.cpp
Base/: ColliderPoint.cpp  ColliderPoint.h  ColliderRect.cpp  ColliderRect.h  CollisionInfo.h  CollisionSystem.cpp  CollisionSystem.h  ComponentContainer.h  ComponentRegistry.h  ComponentSystem.h  EntityManager.cpp  Game.cpp  Game.h  GameContext.h  ICollider.cpp  ICollider.h  Player.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  System.h
Base/Collision/: Collidable.h  Collider.cpp  Collider.h  ColliderPoint.cpp  ColliderPoint.h  ColliderRect.cpp  ColliderRect.h  ColliderType.h  CollisionHelper.h  CollisionInfo.h  CollisionSystem.cpp  CollisionSystem.h  ICollider.cpp  ICollider.h
Base/Core/: Math.cpp  Math.h  Mobility.h  SpawnCategory.h  UUID.cpp  UUID.h  Util.h  Utility.h
Base/Data/: InventoryComponent.cpp  InventoryComponent.h  InventorySystem.cpp  InventorySystem.h  ItemEvents.h  ItemInstance.cpp  ItemInstance.h  ItemRegistry.cpp  ItemRegistry.h  PlayerInventoryComponent.cpp  PlayerInventoryComponent.h
Base/Entity/: Actor.cpp  Actor.h  Entity.cpp  Entity.h  FunctionalEntity.h  IsometricActor.cpp  IsometricActor.h  PlacableEntity.h  SpacialEntity.cpp  SpacialEntity.h  SpriteActor.cpp  UIElement.cpp  UIElement.h  UIElementText.cpp  UIElementText.h
Base/Event/: CallbackContainer.h  EventSystem.cpp  EventSystem.h
Base/GameMap/: GameMap.cpp  GameMap.h  GameMapSystem.cpp  GameMapSystem.h  MapGenerator.cpp  MapGenerator.h  MapTile.cpp  MapTile.h  TileTypes.h
Base/Input/: Clickable.h  ContextFactory.cpp  ContextFactory.h  Controller.cpp  Controller.h  GameAction.h  InputActions.h  InputContext.cpp  InputContext.h  InputEventKey.h  InputSystem.cpp  InputSystem.h  UIController.cpp
Base/Logging/: Logger.h
Base/Observers/: EventData.h  Observer.h  Subject.cpp  Subject.h  UpdateScoreboardObserver.cpp  UpdateScoreboardObserver.h
Base/Sprite/: SpriteComponent.h  SpriteSystem.cpp  SpriteSystem.h
Base/Tags/: TagSystem.cpp
Base/Time/: TimeManager.cpp  TimeManager.h  TimeSystem.cpp  TimeSystem.h  Timer.cpp  Timer.h  TimerHandle.cpp  TimerHandle.h
Base/Transform/: TransformComponent.h  TransformSystem.cpp  TransformSystem.h
Base/UI/: UIBlock.cpp  UIBlock.h  UIButton.h  UIElement.cpp  UIElement.h  UIElementText.cpp  UIElementText.h  UIRoot.cpp  UIRoot.h  UISystem.cpp  UISystem.h
Base/UIOverlay/: OverlaySystem.cpp  OverlaySystem.h
Base/Utility/: CollisionHelper.h  Math.h
Controllers/: BowController.cpp  BowController.h  IController.h  PlayerController.cpp  PlayerController.h
Controllers/Commands/: BowCommands.cpp  BowCommands.h  Command.h
Engine/: ComponentContainer.h  ComponentRegistry.h  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  GameContext.h  Player.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  System.h
Engine/Collision/: Collidable.h  CollisionHelper.h  CollisionSystem.cpp  CollisionSystem.h
Engine/Core/: Math.h  Util.h
Engine/Data/: InventoryComponent.h  InventorySystem.cpp  InventorySystem.h  ItemDefinition.h  ItemInstance.cpp  ItemInstance.h  ItemRegistry.cpp  ItemRegistry.h
Engine/Entity/: Actor.cpp  SpriteActor.h
Engine/Event/: CallbackContainer.h  EventSystem.h  Events.h
Engine/Input/: ContextFactory.h  Controller.cpp  InputContext.h  InputEventKey.h  InputSystem.h  UIController.h
Engine/JSON/: JSONParser.cpp  JSONParser.h  JSONTokenizer.cpp  JSONTokenizer.h  JSONTypes.h
Engine/Logging/: Logger.cpp  Logger.h
Engine/Observers/: Subject.cpp  Subject.h
Engine/Sprite/: SpriteMobility.h  SpriteRenderProxy.h  SpriteSystem.cpp  SpriteSystem.h
Engine/Tags/: TagSystem.h  Tags.h
Engine/Time/: TimeSystem.h  TimerComponent.h
Engine/Transform/: TransformSystem.h
Engine/UI/: UIBlock.h  UIButton.h  UIElement.cpp  UIElement.h  UIElementText.h  UIRoot.cpp  UIRoot.h  UISystem.h
Engine/UIOverlay/: OverlaySpriteComponent.h  OverlaySystem.h
Entities/: Arrow.cpp  Arrow.h  Bow.cpp  Bow.h  ClickableText.cpp  ClickableText.h  GameMap.cpp  GameMap.h  MapTile.cpp  MapTile.h  Scoreboard.cpp  Scoreboard.h  Target.cpp  Target.h
Entities/Buildings/: Building.cpp  Building.h  BuildingFactory.cpp  BuildingFactory.h  BuildingPlacementButton.h  PeasantHouse.cpp  PeasantHouse.h
Src/: GameItemRegistry.cpp  GameItemRegistry.h  GameItems.h  MainGamePlayer.h  Resources.h
Src/Controllers/: PlayerController.cpp  PlayerController.h
Src/Entities/: ClickableText.cpp  ClickableText.h  ResourceActor.cpp  ResourceActor.h  ResourceFactory.h  ResourceFatory.cpp
Src/Entities/Buildings/: Building.cpp  Building.h  BuildingEvents.h  BuildingFactory.cpp  BuildingFactory.h  BuildingPlacementButton.h  BuildingSprites.h  BuildingType.h  Buildings.h  ConstructionSystem.cpp  ConstructionSystem.h  LandBuilding.h  PeasantHouse.cpp  PeasantHouse.h
Src/Entities/Buildings/Concrete/: PeasantHouse.cpp  PeasantHouse.h  StoneMiner.cpp  StoneMiner.h
Src/UI/: Fonts.h  ResourceBar.cpp  ResourceBar.h  ResourceCounter.cpp  ResourceCounter.h
Tests/: TestFramework.h  TestMain.cpp
Tests/JSON/: ParserTests.cpp  TokenizerTests.cpp
